--- a/git/git_stuff.ipynb
+++ b/git/git_stuff.ipynb
@@ -24,93 +24,20 @@
     "This steps should be made only once\n"
    ],
    "metadata": {
-    "id": "dX3TFdR4Veau"
-   }
+    "id": "dX3TFdR4Veau",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "6WrtugK76kaH",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643318985929,
-     "user_tz": -60,
-     "elapsed": 14469,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "07c571d8-8ec6-47a7-a15f-652e8f3b4e07"
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "%cd /content/drive/MyDrive/Github/master_thesis/"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "r-HVCnc_Z0Q0",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643318992007,
-     "user_tz": -60,
-     "elapsed": 423,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "bd3fa953-c639-4278-af75-3bf2665fcd7a"
-   },
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: '/content/drive/MyDrive/Github/master_thesis/'\n",
-      "/home/anuar/PycharmProjects/master-thesis/git\n"
-     ]
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/anuar/PycharmProjects/master-thesis\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd .."
    ],
    "metadata": {
     "collapsed": false,
@@ -121,57 +48,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%cd /content/drive/MyDrive/Github/master_thesis/"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#!git clone https://github.com/anuarsantoyo/master-thesis.git"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "yHZXfq-nZ5fR",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643105097368,
-     "user_tz": -60,
-     "elapsed": 780,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "93cf5590-24fe-41fb-c7f8-46a1adadc9c3"
-   },
-   "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
-      "\n",
-      "\t\u001B[31mmodified:   git/git_stuff.ipynb\u001B[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ]
+   }
   },
   {
    "cell_type": "markdown",
    "source": [
     "# Git Tools\n",
-    "Set of tools to easily work with GitHub \n",
+    "Set of tools to easily work with GitHub\n",
     "repository\n",
     "\n"
    ],
    "metadata": {
-    "id": "kG7hbdgGVG_8"
+    "collapsed": false
    }
   },
   {
@@ -180,7 +92,7 @@
     "## Pull, Add, Commit and Push"
    ],
    "metadata": {
-    "id": "IfWYpYAFvajB"
+    "collapsed": false
    }
   },
   {
@@ -192,94 +104,41 @@
     "\n"
    ],
    "metadata": {
-    "id": "Yx6E_u_sv9Oy"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!git config --global user.email \"anuarsantoyo@hotmail.com\" # Email\n",
     "!git config --global user.name \"Anuar\" #Name\n",
     "!git pull"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "GE8UMkFLIUlN",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643325732127,
-     "user_tz": -60,
-     "elapsed": 1301,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "fa8ea27f-8a6b-47f9-f191-38e1cadf145f"
-   },
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\r\n"
-     ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ]
+   }
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!git pull\n",
     "!git add . # '.' Adds all changes, if you wanto to only add specific files wirte file name instead of '.'\n",
-    "!git commit -m \"Changed file name, test git\"\n",
+    "!git commit -m \"Updated rest of categorical values and finished first nan handling\"\n",
     "!git push -u origin master #Must be your branch name"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "tSp5mGGLbRLp",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643282445620,
-     "user_tz": -60,
-     "elapsed": 12086,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "2424ea4e-27b8-49ae-be11-1cca6b6d9434"
-   },
-   "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Already up to date.\n",
-      "[master da69887] Occupation using pd.get_dummy()\n",
-      " 2 files changed, 2 insertions(+), 2 deletions(-)\n",
-      " rewrite git/git_stuff.ipynb (99%)\n",
-      " rewrite preprocessing/220125_preprocessing.ipynb (72%)\n",
-      "Counting objects: 6, done.\n",
-      "Delta compression using up to 2 threads.\n",
-      "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (6/6), 2.39 KiB | 816.00 KiB/s, done.\n",
-      "Total 6 (delta 4), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001B[K\n",
-      "To https://github.com/anuarsantoyo/master-thesis.git\n",
-      "   3a589c5..da69887  master -> master\n",
-      "Branch 'master' set up to track remote branch 'master' from 'origin'.\n"
-     ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ]
+   }
   },
   {
    "cell_type": "markdown",
@@ -287,47 +146,24 @@
     "## Merge to master"
    ],
    "metadata": {
-    "id": "ha6ZgiZDVFjY"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!git merge master\n",
     "!git checkout master\n",
     "!git merge <yourbranch>"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "dFWLiMjejqPG",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643106593550,
-     "user_tz": -60,
-     "elapsed": 266,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "2ba7110e-a4c7-4375-cfe4-475595654491"
-   },
-   "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tgit/git_stuff.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ]
+   }
   },
   {
    "cell_type": "markdown",
@@ -335,42 +171,22 @@
     "## Create new branch"
    ],
    "metadata": {
-    "id": "K5Wx2ntbx1p5"
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "!git checkout -b anuar"
    ],
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "fqPtZtPdwU85",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1643106525096,
-     "user_tz": -60,
-     "elapsed": 311,
-     "user": {
-      "displayName": "Anuar Santoyo",
-      "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s64",
-      "userId": "15430604778782296413"
-     }
-    },
-    "outputId": "759fd678-ebdf-4ed1-bfec-e75460ad82d6"
-   },
-   "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "fatal: A branch named 'anuar' already exists.\n"
-     ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ]
+   }
   }
  ]
 }
