added covid image

--- a/clustering/anuar_test.ipynb
+++ b/clustering/anuar_test.ipynb
@@ -4550,6 +4550,22 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<img src=\"../data/coronavirus-data-explorer.png\" alt=\"drawing\" width=\"1110\" height=\"400\"/>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Group Analysis"
    ],
    "metadata": {
