renamed model file and funtction within

--- a/model/model_core.ipynb
+++ b/model/model_core.ipynb
@@ -98,7 +98,7 @@
    "execution_count": 48,
    "outputs": [],
    "source": [
-    "def epidim_model(population, R, initial_newly_infected, alpha):\n",
+    "def epid_model(population, R, initial_newly_infected, alpha):\n",
     "        n = R.size()[0]\n",
     "        dtype = torch.float32\n",
     "        #device = torch.device(\"cuda\")\n",
