--- a/model/methods.ipynb
+++ b/model/methods.ipynb
@@ -40,6 +40,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "class Transformations:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def bij_transform(self, prime, lower, upper):\n",
+    "      \"\"\"Recieves a prime value of type tensor in [-inf, inf] and returns value in [lower, upper]\"\"\"\n",
+    "      bij = 1 / (1 + torch.exp(-prime / upper))\n",
+    "      scale = upper - lower\n",
+    "      return scale * bij + lower\n",
+    "\n",
+    "    def bij_transform_inv(self, transf, lower, upper):\n",
+    "      \"\"\"Inverse transformation - Recieves a value of type tensor in [lower, upper] and returns value in [-inf, inf]\"\"\"\n",
+    "      return -torch.log(((upper - lower) / (transf - lower) - 1) ** upper)\n",
+    "\n",
+    "\n",
+    "class RandomWalk(Transformations):\n",
+    "    def __init__(self, sigma_init, r_0, lower, upper, device, dtype):\n",
+    "        self.R0 = r_0\n",
+    "        self.sigma = sigma_init\n",
+    "        self.sigma_prime = self.bij_transform_inv(torch.tensor(self.sigma, device=device, dtype=dtype), lower, upper).detach().clone().requires_grad_(True)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
