--- a/clustering/nmf_clustering.ipynb
+++ b/clustering/nmf_clustering.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from clustering.utils import *\n",
-    "from sklearn.decomposition import non_negative_factorization"
+    "from sklearn.decomposition import non_negative_factorization\n",
+    "from tqdm import tqdm"
    ],
    "metadata": {
     "collapsed": false,
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -39,23 +40,178 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Import Data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "df, answers, info_dict = get_cluster_input_data(scaler=None)\n",
+    "df.head()\n",
+    "answers = answers.T"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Metrics for optimal number of latent factors (clusters)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Residual sum of squares against randomized data (RSS)\n",
+    "For any dimensionality reduction approach, there is always a loss of information compared to your original data (estimated by RSS). Now perform NMF for increasing K and calculate RSS with both your original dataset and a randomized dataset. When comparing RSS in function of K, the RSS decreases with increasing K in the original dataset, but this is less the case for the randomized dataset. By comparing both slopes, there should be an K where they cross. In other words, how much information could you afford to lose (=highest K) before being within the noise."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)\n",
+    "answers_rand = (np.random.rand(*answers.shape)*7).round() # Create random answer matrix"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8/8 [02:19<00:00, 17.42s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "H_list = []\n",
+    "for k in tqdm(range(2,10)):\n",
+    "    W, H, n_iter = non_negative_factorization(answers.T, n_components=2,max_iter=2000,init='random')\n",
+    "    H_list.append(H)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
-      "text/plain": "  gender  postnr   region  Q1_2_covid_is_threat  Q2_1_easy_to_follow_advice  \\\n0    Man    2830  Capital              4.796778                         5.0   \n1  Woman    4654  Zealand              7.000000                         7.0   \n2  Woman    7451  Central              7.000000                         7.0   \n3    Man    4700  Zealand              6.000000                         1.0   \n4    Man    4000  Zealand              5.000000                         1.0   \n\n   Q2_2_can_follow_advice_if_wanted  Q2_3_if_follow_advice_safe  \\\n0                               7.0                         4.0   \n1                               7.0                         5.0   \n2                               7.0                         7.0   \n3                               7.0                         2.0   \n4                               1.0                         2.0   \n\n   Q2_4_if_follow_advice_others_safe  \\\n0                                7.0   \n1                                7.0   \n2                                7.0   \n3                                1.0   \n4                                1.0   \n\n   Q2_5_follow_advice_relationships_impared  Q2_6_follow_advice_life_degraded  \\\n0                                       4.0                               5.0   \n1                                       6.0                               5.0   \n2                                       4.0                               3.0   \n3                                       7.0                               4.0   \n4                                       2.0                               2.0   \n\n   ...  Q14_ocupation_employee_private  Q14_ocupation_unemployed  \\\n0  ...                               0                         0   \n1  ...                               0                         0   \n2  ...                               0                         0   \n3  ...                               0                         0   \n4  ...                               0                         0   \n\n   Q14_ocupation_employee_public  Q14_ocupation_self_employed  \\\n0                              1                            0   \n1                              1                            0   \n2                              1                            0   \n3                              0                            0   \n4                              0                            0   \n\n   Q14_ocupation_student  Q14_ocupation_other  Q15_economic_spectrum  \\\n0                      0                    0                    2.0   \n1                      0                    0                    2.0   \n2                      0                    0                    NaN   \n3                      0                    0                    NaN   \n4                      0                    1                    2.0   \n\n   Q15_social_spectrum  Q16_economic_spectrum  Q16_social_spectrum  \n0                  4.0                    4.0                  2.0  \n1                  4.0                    2.0                  4.0  \n2                  NaN                    NaN                  NaN  \n3                  NaN                    NaN                  NaN  \n4                  4.0                    NaN                  NaN  \n\n[5 rows x 56 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gender</th>\n      <th>postnr</th>\n      <th>region</th>\n      <th>Q1_2_covid_is_threat</th>\n      <th>Q2_1_easy_to_follow_advice</th>\n      <th>Q2_2_can_follow_advice_if_wanted</th>\n      <th>Q2_3_if_follow_advice_safe</th>\n      <th>Q2_4_if_follow_advice_others_safe</th>\n      <th>Q2_5_follow_advice_relationships_impared</th>\n      <th>Q2_6_follow_advice_life_degraded</th>\n      <th>...</th>\n      <th>Q14_ocupation_employee_private</th>\n      <th>Q14_ocupation_unemployed</th>\n      <th>Q14_ocupation_employee_public</th>\n      <th>Q14_ocupation_self_employed</th>\n      <th>Q14_ocupation_student</th>\n      <th>Q14_ocupation_other</th>\n      <th>Q15_economic_spectrum</th>\n      <th>Q15_social_spectrum</th>\n      <th>Q16_economic_spectrum</th>\n      <th>Q16_social_spectrum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Man</td>\n      <td>2830</td>\n      <td>Capital</td>\n      <td>4.796778</td>\n      <td>5.0</td>\n      <td>7.0</td>\n      <td>4.0</td>\n      <td>7.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Woman</td>\n      <td>4654</td>\n      <td>Zealand</td>\n      <td>7.000000</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>5.0</td>\n      <td>7.0</td>\n      <td>6.0</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.0</td>\n      <td>4.0</td>\n      <td>2.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Woman</td>\n      <td>7451</td>\n      <td>Central</td>\n      <td>7.000000</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Man</td>\n      <td>4700</td>\n      <td>Zealand</td>\n      <td>6.000000</td>\n      <td>1.0</td>\n      <td>7.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>7.0</td>\n      <td>4.0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Man</td>\n      <td>4000</td>\n      <td>Zealand</td>\n      <td>5.000000</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2.0</td>\n      <td>4.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 56 columns</p>\n</div>"
+      "text/plain": "(122829, 2)"
      },
-     "execution_count": 6,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df, answers, info_dict = get_cluster_input_data()\n",
-    "df.head()"
+    "answers.shape\n",
+    "W.shape"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "Hs_matrix = np.stack(H_list)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(8, 2, 23)"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hs_matrix.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1.66951406, 2.12834783, 2.18437492, 2.07823759, 2.22626193,\n        0.89175098, 0.5845344 , 2.17205095, 1.91475253, 1.81809366,\n        2.04145729, 1.96050852, 1.90164735, 1.77508169, 2.01649313,\n        0.89254547, 2.26399842, 1.58583914, 2.167143  , 2.12949003,\n        0.92934126, 2.09574553, 0.51391788],\n       [1.35633255, 1.02342679, 1.43371807, 1.11959388, 1.40491886,\n        2.49988538, 2.29423651, 1.77370242, 1.61286578, 1.41842364,\n        1.80925022, 1.61302299, 1.60472124, 1.59465323, 1.66830997,\n        0.86150579, 1.17351987, 1.20463309, 1.12594834, 0.8570594 ,\n        2.36352068, 0.68779246, 0.89042637]])"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hs_matrix.mean(axis=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -71,7 +227,6 @@
     "W_dist = []\n",
     "H_dist = []\n",
     "for k in range (2,10):\n",
-    "\n",
     "    W_s = []\n",
     "    _dist_W = 0\n",
     "    H_s = []\n",
