added nmf to utils

--- a/clustering/nmf_clustering.ipynb
+++ b/clustering/nmf_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 103,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -19,18 +19,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/anuar/PycharmProjects/master-thesis\n"
+      "/home/anuar/PycharmProjects\n"
      ]
     }
    ],
    "source": [
     "%cd .."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0011599349216009143"
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.array([[1, 1], [2, 1], [3, 1.2], [4, 1], [5, 0.8], [6, 1]])\n",
+    "from sklearn.decomposition import NMF\n",
+    "model = NMF(n_components=2, init='random', random_state=0)\n",
+    "W = model.fit_transform(X)\n",
+    "H = model.components_\n",
+    "model.reconstruction_err_"
    ],
    "metadata": {
     "collapsed": false,
