edited negative binomnial clac

--- a/model/220315_model_optimization.ipynb
+++ b/model/220315_model_optimization.ipynb
@@ -1555,7 +1555,10 @@
      "base_uri": "https://localhost:8080/",
      "height": 265
     },
-    "outputId": "64b9772f-1fc2-4bbe-f449-4df2ffb16b08"
+    "outputId": "64b9772f-1fc2-4bbe-f449-4df2ffb16b08",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "execution_count": null,
    "outputs": [
